--- a/从零实现一个简单的vue/index.html
+++ b/从零实现一个简单的vue/index.html
@@ -10,7 +10,9 @@
   <div id="app">
     <h3>{{say}}</h3>
     <input value="" v-model="say" />
+    <h3>{{hello}}</h3>
     <p>{{school.student}}</p>
+    <h4>{{language}}</h4>
   </div>
   <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script> -->
   <script src="./vue.js"></script>
@@ -21,6 +23,11 @@
         say: 'vue',
         school: {
           student: 'tom'
+        }
+      },
+      computed: {
+        hello: function() {
+          return 'hello ' + this.say
         }
       }
     })
