--- a/从零实现一个简单的vue/index.html
+++ b/从零实现一个简单的vue/index.html
@@ -23,7 +23,8 @@
         say: 'vue',
         school: {
           student: 'tom'
-        }
+        },
+        language: 'js'
       },
       computed: {
         hello: function() {
